# Chatbot-Financeiro-API

./: .env.example  .gitignore  Dockerfile  app_full_logs.txt  app_logs.json  app_logs_final.txt  app_logs_utf8.txt  app_logs_victory.txt  config_webhook.py  debug_req.py  diag_evolution.py  diag_list_v2.py  docker-compose.yml  error.json  error_log.txt  evo.txt  fs.txt  full_app_logs.txt  get_logs.py  init-db.sh  instances.json  log.txt  pyproject.toml  requirements.txt  seed.py  test_models.py  test_output.txt  tests_error.txt  tests_pm_error.txt  tests_result.txt
alembic/: env.py
alembic/versions/: 001_initial.py
seeds/: seed_israel.py
src/api/: dependencies.py  main.py  middleware.py  schemas.py  security.py
src/domain/: exceptions.py
src/infra/: celery_app.py  config.py  logging.py
src/use_cases/: base.py  cancel_goal.py  create_goal.py  get_client_by_phone.py  get_goals.py  get_monthly_spending.py  process_message.py  register_contribution.py  register_spending.py  simulate_purchase.py  simulate_savings.py  summarize_history.py
tests/: conftest.py  test_cancel_goal.py  test_gemini_client.py  test_gemini_llm_client.py  test_get_monthly_spending.py  test_process_message.py  test_register_contribution.py  test_register_spending.py  test_summarize_history.py  test_webhook_integration_remote.py
tests_container_sync/: conftest.py  test_create_goal.py  test_gemini_llm_client.py  test_process_message.py  test_services.py  test_smoke.py  test_smoke_remote.py  test_summarize_history.py  test_webhook_integration.py  test_webhook_integration_remote.py
(+35 files in other folders)
